# telemetry-mcp

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: diagram-freshness.yml  test.yml  vulture-check.yml
docs/architecture/: system-context.md
src/telemetry_mcp/: __init__.py  backend.py  core.py  emit_core.py  emit_mcp_server.py  emit_otlp.py  mcp_server.py
tests/: conftest.py  fixtures.py  test_backend.py  test_core.py  test_emit_core.py  test_emit_mcp_server.py  test_mcp_server.py  test_package.py
