[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "telemetry-mcp"
version = "0.1.0"
description = "A read-only MCP server that queries a configurable metrics backend (list/describe/query/summary) as typed tools, with credentials resolved at call time and a schema-agnostic backend interface."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Selamy Labs" },
]
keywords = ["agents", "mcp", "telemetry", "metrics", "observability"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.optional-dependencies]
mcp = [
  "mcp>=1.2",
]
emit = [
  "mcp>=1.2",
  "opentelemetry-api>=1.28",
  "opentelemetry-exporter-otlp-proto-http>=1.28",
  "opentelemetry-sdk>=1.28",
]
bigquery = [
  "google-cloud-bigquery>=3.0",
]
test = [
  "coverage[toml]>=7.6",
  "mcp>=1.2",
  "opentelemetry-api>=1.28",
  "opentelemetry-exporter-otlp-proto-http>=1.28",
  "opentelemetry-sdk>=1.28",
  "pytest>=8.3",
  "ruff>=0.8",
]

[project.scripts]
telemetry-mcp = "telemetry_mcp.mcp_server:main"
telemetry-emit-mcp = "telemetry_mcp.emit_mcp_server:main"

[project.urls]
Homepage = "https://github.com/selamy-labs/telemetry-mcp"
Repository = "https://github.com/selamy-labs/telemetry-mcp"
Issues = "https://github.com/selamy-labs/telemetry-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/telemetry_mcp"]

[tool.coverage.run]
branch = true
source = ["telemetry_mcp"]

[tool.coverage.report]
show_missing = true
skip_covered = true
omit = ["src/telemetry_mcp/emit_otlp.py"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C90", "RUF", "S"]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.per-file-ignores]
# S101: asserts are the point of tests.
"tests/**" = ["S101"]
